# a-stock-forecast

./: .gitignore  AGENTS.md  DESIGN.md  README.md  config.jsonc  package.json  pnpm-lock.yaml  prompt.md  ui-design.pen
frontend/: .env.development  .eslintrc.json  .prettierignore  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/scripts/: dev.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/stock/[code]/: page.tsx
frontend/src/components/: KLineChart.tsx  NavBar.tsx  SearchBox.tsx  Sidebar.tsx  StockHeader.tsx  ToggleButton.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts  jsonc.d.ts
server/: pyproject.toml
server/app/: config.py  main.py
server/app/api/: history.py  stock.py
server/app/model/: README.md  __init__.py  kronos.py  module.py
server/app/schemas/: response.py
server/app/services/: predictor.py  search_store.py  stock_data.py
server/scripts/: preload_model.py  run_dev.py  sync_ports.py
